--- a/procedimiento.html
+++ b/procedimiento.html
@@ -45,7 +45,7 @@
 <p>- Factorización.</p>
 <p>- Fracciones algebraicas.</p>
 <p></p>
-<p>Descarga el archivo “CuadernilloMAT1S3_T3.docx”, para ello haz clic<a href="1MAT1S3_T3.docx" download="1MAT1S3_T3.docx"> aquí</a></p>
+<p>Descarga el archivo “CuadernilloMAT1S3_T3.docx”, para ello haz clic<a href="docs/MAT1S3_T3.docx" download="MAT1S3_T3.docx"> aquí</a></p>
 
 <p>Lee las instrucciones de los incisos del cuadernillo de actividades MAT1-T3.</p>
 <p>Resuelve cada situación, tomando en consideración los señalamientos de la instrucción.</p>
@@ -61,8 +61,6 @@
 <div id='bottomPagination'>
 <div class="pagination noprt">
 <a href="index.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="instrumento_de_evaluacin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
-</div>
-</div>
 </div>
 </div>
 </div>
